--- a/src/app/change-type-modal/change-type-modal.component.html
+++ b/src/app/change-type-modal/change-type-modal.component.html
@@ -16,7 +16,7 @@
               <mat-option [value] ="1" >Carpenter</mat-option>
               <mat-option [value] ="2">Masons</mat-option>
               <mat-option [value] ="3">Fabricator</mat-option>
-              <mat-option [value] ="4">Architect</mat-option>
+              <mat-option [value] ="6">Dealer</mat-option>
 
             </mat-select>
           </mat-form-field> 
