--- a/src/app/dealer/dealer-list/dealer-list.component.html
+++ b/src/app/dealer/dealer-list/dealer-list.component.html
@@ -90,7 +90,7 @@
                           <th class="w130">State</th>
                           <th class="w130">District</th>
                           <th class="w130 text-center">Company Point Transfer</th>
-                          <th class="w200 text-center">Assigned Sales User</th>
+                          <!-- <th class="w200 text-center">Assigned Sales User</th> -->
 
                           <th class="w150 text-center">
                             <div class="ml0">
@@ -158,12 +158,12 @@
 
 
                           <th class="w130"></th>
-                          <th class="w200">
+                          <!-- <th class="w200">
                             <div class="search-form">
                                 <input type="text" placeholder="Sales user" [(ngModel)]="filter.full_name"  (keyup.enter)="current_page = 1;getDealerList('')">
                                 <i class="material-icons">search</i>
                             </div>
-                        </th>
+                        </th> -->
                           <th class="w150">
                             <div class="search-form">
                                 <!-- <input type="text" placeholder="Search" [(ngModel)]="filter.total_wallet_point"  (keyup.enter)="current_page = 1;getDealerList('')">
@@ -221,7 +221,7 @@
                             <td class="w130">{{val.district | titlecase }}</td>
       
                             <td class="w130 text-center"> {{val.total_company_points}}</td>
-                            <td class="w200 text-center">{{val.full_name}}</td>
+                            <!-- <td class="w200 text-center">{{val.full_name}}</td> -->
       
       
       
