--- a/src/app/digitallist/digitallist.component.html
+++ b/src/app/digitallist/digitallist.component.html
@@ -25,7 +25,7 @@
                 <img src="assets/pdf.png" alt="pdf" /> 
   
          
-                <a href="{{uploadUrl + val.pdf}}" target="_blank">{{val.pdf_name  | titlecase}}</a>  
+                <a href="{{uploadUrl + val.pdf}}" target="_blank">{{val.pdf_name  | titlecase}} - {{val.product_name  | titlecase}}</a> 
             <!-- </a> -->
             <div class="cs-action">
                 <a class="ac-red" matTooltip="Delete" matTooltipPosition="below" 
