--- a/src/app/digitallist/digitallist.component.scss
+++ b/src/app/digitallist/digitallist.component.scss
@@ -18,7 +18,7 @@
         position: relative;
         overflow: hidden;
         margin-bottom: 24px;
-        border-left: 4px solid #ca9137;
+        border-left: 4px solid #ffba00;
         img{
             height: 25px;
         }
