--- a/src/app/distributor/distributor-detail/distributor-detail.component.html
+++ b/src/app/distributor/distributor-detail/distributor-detail.component.html
@@ -210,7 +210,7 @@
 
                                 <li (click)="mode='1'; karigarlist()" [ngClass]="{'active': mode == '1'}">
                                     <a>
-                                        <p>ASSIGN ARCHITECT LIST </p>
+                                        <p>ASSIGN DEALER LIST </p>
                                         <span>{{reedam_all}}</span>
                                     </a>
                                 </li>
@@ -444,7 +444,7 @@
                                     <th class="w100 text-center">Quantity</th>
                                     <th class="w100">Status</th>
                                     <!-- <th class="w100">Company Status</th> -->
-                                    <th class="w100 text-center">Architect  Points</th>
+                                    <th class="w100 text-center">Dealer  Points</th>
                                 </tr>
                             </table>
                         </div>
