--- a/src/app/karigar/karigar-detail/karigar-detail.component.html
+++ b/src/app/karigar/karigar-detail/karigar-detail.component.html
@@ -163,7 +163,7 @@
         
         <div class="row">
             
-            <!-- <div class="col s6">
+            <div class="col s6">
                 <div class="sprate-box gift-offer">
                     <div class="full-offer">
                         <div class="top-heading">
@@ -193,7 +193,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="sprate-box gift-offer mt15">
+                <!-- <div class="sprate-box gift-offer mt15">
                     <form name="karigarform" (ngSubmit)="f.form.valid && submit_manual_permission()" #f="ngForm" novalidate autocomplete="off">
                         <div class="full-offer">
                             <div class="top-heading">
@@ -229,8 +229,8 @@
                             </div>
                         </div>
                     </form>
-                </div>
-            </div> -->
+                </div> -->
+            </div>
             
             
             
@@ -265,7 +265,7 @@
             </div>
             
             <div class="col s6">
-                <div class="sprate-box gift-offer">
+                <div class="sprate-box gift-offer mt15">
                     <div class="full-offer">
                         <div class="top-heading">
                             <h2>BANK DETAIL</h2>
