--- a/src/app/offer/edit-offer/edit-offer.component.html
+++ b/src/app/offer/edit-offer/edit-offer.component.html
@@ -20,11 +20,11 @@
                           <mat-form-field class="cs-input">
                             <mat-label>Select User Type</mat-label>
                             <mat-select  [(ngModel)]="addOffer.user_type" name="user_type" #user_type="ngModel" required>
-                              <mat-option value=""></mat-option>
-                              <mat-option value="Carpenter">Carpenter</mat-option>
-                              <mat-option value="Masons">Masons</mat-option>
-                              <mat-option value="Fabricator">Fabricator</mat-option>
-                              <mat-option value="Architect">Architect</mat-option>
+                              <!-- <mat-option value=""></mat-option> -->
+                              <mat-option value="Karigar">Carpenter/Masons/Fabricator</mat-option>
+                              <mat-option value="Dealer">Dealer</mat-option>
+                              <!-- <mat-option value="Masons">Masons</mat-option>
+                              <mat-option value="Fabricator">Fabricator</mat-option> -->
                             </mat-select>
                           </mat-form-field>  
                         </div>
