--- a/src/app/purchase-add/purchase-add.component.html
+++ b/src/app/purchase-add/purchase-add.component.html
@@ -45,7 +45,7 @@
                     <div class="col s3">
                       <div class="control-field">
                         <mat-form-field class="cs-input">
-                          <mat-select placeholder="Architect Name" [(ngModel)]="data.architect_id" name="architect_id" #architect_id="ngModel" required>
+                          <mat-select placeholder="Dealer Name" [(ngModel)]="data.dealer_id" name="dealer_id" #dealer_id="ngModel" required>
                             <!-- <mat-option>
                               <ngx-mat-select-search noEntriesFoundLabel="'no data found'" placeholderLabel="Search.." (keyup)="getarchitect($event.target.value,'')"></ngx-mat-select-search>
                             </mat-option> -->
