--- a/src/app/purchase-detail/purchase-detail.component.html
+++ b/src/app/purchase-detail/purchase-detail.component.html
@@ -38,7 +38,7 @@
                     <li>
                       <figure>
                         <div class="right-cont" *ngIf="getData.architect_name !='' && getData.architect_contact !=''">
-                          <p >Architect Name</p>
+                          <p >Dealer Name</p>
                           <span>{{getData.architect_name | titlecase }} - {{getData.architect_contact}}</span>
                         </div>
                       </figure>
@@ -71,7 +71,7 @@
                     <li>
                       <figure>
                         <div class="right-cont">
-                          <p>Architect Points</p>
+                          <p>Dealer Points</p>
                           <span>{{getData.architect_points == ''? '0' :  getData.architect_points}}</span>
                         </div>
                       </figure>
