--- a/src/app/system-user-add/system-user-add.component.html
+++ b/src/app/system-user-add/system-user-add.component.html
@@ -79,29 +79,29 @@
                 Fabricator
               </mat-checkbox>
               
-              <mat-checkbox class="check-list" name="architect" [(ngModel)]="userForm.architect"
-              #architect="ngModel">
-              Architect
+              <mat-checkbox class="check-list" name="dealer" [(ngModel)]="userForm.dealer"
+              #dealer="ngModel">
+              Dealer
             </mat-checkbox>
-            <mat-checkbox class="check-list" name="sales_executive" [(ngModel)]="userForm.sales_executive"
+            <!-- <mat-checkbox class="check-list" name="sales_executive" [(ngModel)]="userForm.sales_executive"
             #sales_executive="ngModel">
             Sales Executive 
-          </mat-checkbox>
+          </mat-checkbox> -->
             
             <mat-checkbox class="check-list" name="coupon_code" [(ngModel)]="userForm.coupon_code"
             #coupon_code="ngModel">
             Coupon Codes
           </mat-checkbox>
           
-          <mat-checkbox class="check-list" name="site" [(ngModel)]="userForm.site"
+          <!-- <mat-checkbox class="check-list" name="site" [(ngModel)]="userForm.site"
           #site="ngModel">
           Site
-        </mat-checkbox>
+        </mat-checkbox> -->
         
-        <mat-checkbox class="check-list" name="purchase" [(ngModel)]="userForm.purchase"
+        <!-- <mat-checkbox class="check-list" name="purchase" [(ngModel)]="userForm.purchase"
         #purchase="ngModel">
         Purchase
-      </mat-checkbox>
+      </mat-checkbox> -->
       <mat-checkbox class="check-list" name="feedback" [(ngModel)]="userForm.feedback"
       #feedback="ngModel">
       Feedback
