--- a/src/app/karigar/karigar-add/karigar-add.component.html
+++ b/src/app/karigar/karigar-add/karigar-add.component.html
@@ -111,8 +111,24 @@
                                                 </div>
                                             </div>
                                         </div>
+                                       
+
+                                        
                                     </div>
                                     <div class="row">
+                                        <div class="col s6">
+                                            <div class="control-field">
+                                                <mat-form-field class="cs-input">
+                                                  <mat-select placeholder="Assign Dealer" [(ngModel)]="karigarform.dealer_id" name="dealer_id"  #dealer_id="ngModel" required>
+                                                    <mat-option >
+                                                      <ngx-mat-select-search noEntriesFoundLabel="'no data found'" placeholderLabel="Search..." (keyup)="AssignDealer($event.target.value)"></ngx-mat-select-search>
+                                                    </mat-option>
+                                                    <mat-option [value]="row.id" *ngFor="let row of dealerList">{{row.company_name | titlecase}}-{{row.name |titlecase}}-{{row.mobile_no}}</mat-option>
+                                                  </mat-select>
+                                                </mat-form-field>   
+                                              </div>
+
+                                        </div>
                                         
                                       
                                     </div>
