--- a/src/app/offer/offer-list/offer-list.component.html
+++ b/src/app/offer/offer-list/offer-list.component.html
@@ -66,7 +66,7 @@
                         <tr>
                             <th class="w40">S no.</th>
                             <th class="w140">Date / Created by</th>
-                            <th class="w100">Type</th>
+                            <th class="w180">Type</th>
                             <th>Title</th>
                             <th class="w100">Offer Code</th>
                             <th class="w110">Start Date</th>
@@ -94,17 +94,17 @@
                                     </mat-form-field>
                                 </div>
                             </th>
-                            <th class="w100">
+                            <th class="w180">
                                 <div class="form-area">
                                     <div class="slect mr0">
                                         <mat-form-field>
                                             <mat-label>All</mat-label>
                                             <mat-select  [(ngModel)]="filter.user_type" name="user_type" #user_type="ngModel" (selectionChange)="getOfferList('')">
                                                 <mat-option value="All" >All</mat-option>
-                                                <mat-option value="Carpenter" >Carpenter</mat-option>
-                                                <mat-option value="Masons" >Masons</mat-option>
-                                                <mat-option value="Fabricator" >Fabricator</mat-option>
-                                              <mat-option value="Architect">Architect</mat-option>
+                                                <mat-option value="Karigar" >Carpenter/Masons/Fabricator</mat-option>
+                                                <mat-option value="Dealer" >Dealer</mat-option>
+                                                <!-- <mat-option value="Fabricator" >Fabricator</mat-option>
+                                              <mat-option value="Dealer">Dealer</mat-option> -->
                                             </mat-select>
                                         </mat-form-field>
                                     </div>
@@ -167,7 +167,9 @@
                     <tr *ngFor="let val of offer; let i = index">
                         <td class="w40">{{ ( (current_page - 1 ) * 20 ) + ( i+1 ) }}</td>
                         <td class="w140"><ng-container *ngIf="val.date_created  != '0000-00-00 00:00:00' "> {{val.date_created | date: 'dd MMM yyyy'}} / {{val.created_name}} </ng-container></td>
-                        <td class="w100">{{val.user_type}}</td>
+                        <td class="w180" *ngIf="val.user_type!='Karigar'">{{val.user_type}}</td>
+                        <td class="w180" *ngIf="val.user_type=='Karigar'">Carpenter/Masons/Fabricator</td>
+
                         <td><a routerLink="/offer-detail/{{val.id}}" class="blue">{{val.title  | titlecase }}</a></td>
                         <td class="w100">#{{val.offer_code}}</td>
                         <td class="w110">{{val.start_date | date: 'dd MMM yyyy'}}</td>
@@ -180,7 +182,7 @@
                                 [disabled]="is_edit=='true'"></mat-slide-toggle>
                                 
                                 <div class="over-sec lar-h12">
-                                    <i class="material-icons deactive dlt_ico"  (click)="deleteOffer(val.id)"  style="color:red">delete_sweep</i>
+                                    <i class="material-icons"  (click)="deleteOffer(val.id)">delete_sweep</i>
                                 </div> 
                             </td>
                         </tr>
