--- a/src/app/uploaddigitalcat/uploaddigitalcat.component.html
+++ b/src/app/uploaddigitalcat/uploaddigitalcat.component.html
@@ -24,6 +24,23 @@
 
               </div>
           </div>
+
+          <div class="col s12">
+            <div class="option-field">
+                <div class="control-field pl">
+                    <mat-form-field class="cs-input">
+                        <mat-select placeholder="Product Name" name="product_point_id"  [(ngModel)]="category.product_point_id" #product_point_id="ngModel" 
+                        required>
+                            <mat-option  [value]="val.product_point_id" *ngFor="let val of product_code" (click)="getprod(val)" >
+                                {{val.product_point_group}}
+                            </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+
+            </div>
+           
+        </div>
           
           <div class="col s12">
               <div class="file-import">
@@ -42,7 +59,7 @@
       </div>
       
       <div mat-dialog-actions >
-          <button style="color: white;" mat-raised-button (click)="uploadBonus()" [disabled]="!category.cat_name || !istrue" accept=".pdf"color="primary">Upload</button>
+          <button style="color: white;" mat-raised-button (click)="uploadBonus()" [disabled]="!category.cat_name ||!category.product_point_id || !istrue" accept=".pdf"color="primary">Upload</button>
       </div>
   </div>
 </div>
